# gstreamer-rust-project-template

./: .gitignore  Cargo.toml  README.md
.gitea/: template
src/: main.rs  server.rs
